[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.136.3",
    "joblib>=1.5.3",
    "langchain>=1.3.7",
    "langchain-openai>=1.3.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
